# cpp-static-event-mgr

./: .gitignore  CMakeLists.txt  LICENSE  README.MD  xd-event-mgr.code-workspace
event-mgr/: CMakeLists.txt  staticEventMgr.cpp  uuidGen.cpp
event-mgr/include/: staticEventMgr.hpp
event-mgr/util/: uuidGen.cpp  uuidGen.h
test/: events.hpp  main.cpp
